fix grid gap base layout

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -8,7 +8,7 @@
         "nav footer ads";
     grid-template-rows: minmax(420px, 460px)  auto 50px;
     grid-template-columns: minmax(18%, auto) 1fr 8%;
-    grid-gap: 125px 30px;
+    grid-gap: 125px 50px;
     height: 100vh;
     margin: 0;
 }
@@ -23,6 +23,9 @@
     grid-area: article;
 }
 #mainNav {
+    position: sticky;
+    top: 0;
+    height: 100vh;
     grid-area: nav;
     padding: 30px;
     background-color: $white;
